--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <div class="col-12 col-md-7 bg-secondary-color" id="info-content">
         <div class="row">
           <div class="col-12">
-            <h2 class="title primary-color">Estes dados fazem a diferença</h2>
+            <h2 class=" primary-color">Estes dados fazem a diferença</h2>
             <p class="subttile secondary-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi necessitatibus est voluptatum recusandae ipsum repellat, magni odio, consequatur quisquam nulla enim, eos id? Dolore, adipisci explicabo vitae consectetur illum asperiores.</p>
           </div>
           <div class="col-12" id="info-numbers">
